# smartfork-v2

./: .gitignore  AGENTS.md  LICENSE  README.md  handoff_485fab7d-951b-4209-a5d9-91bca4f97dbb_continue.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: test.yml
.opencode/agents/: ralph-plan.md  ralph-test.md  ralph-worker.md  ralph.md
docs/: opencode-native-ralph.md
docs/prd/: MASTER-PLAN.md  phase-03-indexing-pipeline.md
ralph/: 32-openai-compatible-provider-framework.md  33-opencode-providers.md  34-third-party-providers.md  35-data-model-schema-foundation.md  36-adapter-layer-hierarchy.md  38-search-pipeline-rewrite.md  39-multi-session-intelligence.md  40-cleanup-dependencies.md  41-quality-testing.md  prd.json  progress.txt  prompt.md  ralph.ps1  ralph.sh
specs/: 00-architecture.md  01-providers.md  02-config.md  03-adapters.md  04-parser.md  05-chunking.md  06-embedding.md  07-index-intelligence.md  08-supersession.md  09-metadata-store.md  10-deterministic-search.md  11-agentic-search.md  12-fork-priming.md  13-obsidian-vault.md  14-tui-app.md  15-mcp-server.md  16-cli-commands.md  17-testing-strategy.md  18-edge-cases.md  19-data-models.md  20-test-plan.md  21-cli-ui-redesign.md
src/smartfork/: __main__.py  config.py
tests/: conftest.py  test_config.py  test_edge_cases.py
tests/adapters/: __init__.py  test_base.py  test_claudecode.py  test_kilocode.py  test_opencode.py  test_registry.py  test_remaining_adapters.py
tests/cli/: __init__.py  test_commands.py
tests/eval/: test_cache.py  test_evaluator.py  test_judge.py  test_metrics.py  (+2 more)
(+134 files in other folders)
